--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,8 @@ services:
     build: .
     container_name: advance_todo_app
     environment:
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/advancetodoapp
-      - JWT_SECRET=your_jwt_secret_key9dfujdfmw
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/
+      - JWT_SECRET=your_jwt_secret
       - NODE_ENV=development
       - PORT=5000
     ports:
@@ -17,11 +17,11 @@ services:
 
   db:
     image: postgres:13-alpine
-    container_name: postgres_db
+    container_name: container_name
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: advancetodoapp
+      POSTGRES_USER:
+      POSTGRES_PASSWORD:
+      POSTGRES_DB:
     ports:
       - "5432:5432"
     volumes:
